JMAIndicator: use Math.clamp