@@ -66,7 +66,7 @@ public class JMAIndicator extends CachedIndicator<Num> {
         this.numFactory = indicator.getBarSeries().numFactory();
         this.indicator = indicator;
         this.barCount = barCount;
-        this.phase = numFactory.numOf(Math.min(Math.max(phase, -100), 100)); // Clamp phase between -100 and 100
+        this.phase = numFactory.numOf(Math.clamp(phase, -100, 100)); // Clamp phase between -100 and 100
         this.power = numFactory.numOf(Math.max(1, power)); // Ensure power is at least 1
         this.jmaDataMap = new HashMap<>();
 
